--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
     "react": "^18.1.0",
     "react-animated-text-content": "^1.0.1",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-section": "^3.1.0",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
