--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci  --legacy-peer-deps
+    - run: npx browserslist@latest --update-db
     - run: npm run build --if-present
     - run: npm test
