--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci  --legacy-peer-deps
-    - run: npx browserslist@latest --update-db
+    - run: npm ci --legacy-peer-deps
+    - run: npm install caniuse-lite
+    - run: npx update-browserslist-db@latest --legacy-peer-deps
     - run: npm run build --if-present
     - run: npm test
