--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci --legacy-peer-deps
-    - run: npm install caniuse-lite
+    - run: npm install caniuse-lite --legacy-peer-deps
     - run: npx update-browserslist-db@latest --legacy-peer-deps
-    - run: npm run build --if-present
+    - run: npm run build --if-present --legacy-peer-deps
     - run: npm test
