--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm ci --legacy-peer-deps
     - run: npm install caniuse-lite --legacy-peer-deps
-    - run: npx update-browserslist-db@latest --legacy-peer-deps
+    - run: npx browserslist@latest --update-db --legacy-peer-deps
     - run: npm run build --if-present --legacy-peer-deps
     - run: npm test
