--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "beji-portfolio",
-  "version": "0.3.0",
+  "version": "2.0.1",
   "private": true,
   "homepage": "https://aminebeji.github.io/portfolio",
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@react-three/drei": "^9.80.0",
+    "@react-three/fiber": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
+    "caniuse-lite": "^1.0.30001761",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.1.0",
     "react-animated-text-content": "^1.0.1",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^16.5.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-section": "^3.2.5",
     "react-transition-group": "^4.4.2",
     "sass": "^1.51.0",
+    "three": "^0.155.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +55,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.10",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.3.0"
   }
 }
