--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x, 20.x]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -19,5 +19,5 @@ jobs:
         cache: 'npm'
     - run: npm ci --legacy-peer-deps
     - run: npm install caniuse-lite --legacy-peer-deps
-    - run: npx browserslist@latest --update-db --legacy-peer-deps
-    - run: npm run build --if-present --legacy-peer-deps
+    - run: npx browserslist@latest --update-db
+    - run: npm run build --if-present
